UI: Fix 1px error on firefox

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -733,12 +733,6 @@ td.breakable {
   word-break: break-word;
 }
 
-.btn-group {
-  .dropdown-toggle {
-    height: 36px;
-  }
-}
-
 .entity-form {
   //background-color: rgb(241, 245, 248);
 
